--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@ngrx/store": "^10.0.1",
     "lodash": "^4.17.20",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
