--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/component-store": "^10.0.1",
     "@ngrx/effects": "^10.0.1",
     "@ngrx/entity": "^10.0.1",
+    "@ngrx/router-store": "^10.0.1",
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
     "lodash": "^4.17.20",
