--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "server": "node server.js"
+    "dev:ssr": "ng run xmly:serve-ssr",
+    "serve:ssr": "node dist/xmly/server/main.js",
+    "build:ssr": "ng build --prod && ng run xmly:server:production",
+    "prerender": "ng run xmly:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +22,7 @@
     "@angular/forms": "~10.1.0",
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
+    "@angular/platform-server": "~10.1.0",
     "@angular/router": "~10.1.0",
     "@ngrx/component": "^10.0.1",
     "@ngrx/component-store": "^10.0.1",
@@ -28,8 +32,11 @@
     "@ngrx/schematics": "^10.0.1",
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
+    "@nguniversal/express-engine": "^10.1.0",
+    "express": "^4.15.2",
     "lodash": "^4.17.20",
     "normalize.css": "^8.0.1",
+    "qs": "^6.9.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -38,6 +45,8 @@
     "@angular-devkit/build-angular": "~0.1001.0",
     "@angular/cli": "~10.1.0",
     "@angular/compiler-cli": "~10.1.0",
+    "@nguniversal/builders": "^10.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.161",
