--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         uses: hengkx/ssh-deploy@v1.0.1
         with: # 以下为参数
           USERNAME: 'root'
-          PASSWORD: 'LYC6809915tc'
-          HOST: '114.132.226.66'
+          HOST: ${{ secrets.SERVER_IP }}
+          PASSWORD: ${{ secrets.SERVER_PASSWORD }}
           SOURCE: 'dist'
           TARGET: '/projects/ng-course'
